Sat May  3 04:04:16 2014  Eric Wong  <e@80x24.org>

	* complex.c (parse_comp): replace ALLOCA_N with ALLOCV_N/ALLOCV_END
	  [Bug #9608]
	* rational.c (read_digits): ditto

Sat May  3 00:06:30 2014  Naohisa Goto  <ngotogenome@gmail.com>

	* file.c (HAVE_STRUCT_STATVFS_F_BASETYPE): File::Statfs#fstypename
	  is supported on AIX, HP-UX, and Solaris, by using the value of
	  struct statvfs.f_basetype.

	* configure.in (HAVE_STRUCT_STATVFS_F_BASETYPE): check struct
	  statvfs.f_basetype which is available on AIX, HP-UX, and Solaris.

Fri May  2 21:04:02 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (next_id): no reason to set ID_STATIC_SYM here, as ID
	  returned by rb_intern3 can be a dynamic symbol and the static
	  symbol flag is set otherwise.  [Bug #9787]

Fri May  2 11:32:51 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/test_io.rb (test_seek, test_seek_symwhence): defer
	  File::Statfs#type call which may not be implemented, to mitigate
	  errors on platforms where SEEK_DATA is available but f_type in
	  struct statfs is not.  [ruby-dev:48154] [Bug #9789]

Fri May  2 10:37:55 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (rb_id_attrset): turn dynamically interned Symbol into
	  an ID, since rb_str_dynamic_intern returns a Symbol but not an
	  ID.  [ruby-core:62226] [Bug #9787]

Thu May  1 22:19:34 2014  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* file.c: Change AND condition to nested condition.

Thu May  1 00:36:26 2014  Naohisa Goto  <ngotogenome@gmail.com>

	* file.c (FSTATFS): check availability of struct statfs and
	  struct statvfs in addition to fstatfs(2) and fstatvfs(2).
	  This fixes error in Solaris. [Bug #9788] [ruby-dev:48145]

Wed Apr 30 19:46:23 2014  Narihiro Nakamura  <authornari@gmail.com>

	* gc.c (gc_after_sweep): suppress unnecessary expanding heap.
	  Tomb heap pages are freed pages here, so expanding heap is
	  not required.

Wed Apr 30 17:58:40 2014  Koichi Sasada  <ko1@atdot.net>
